[metadata]
name = ark
version = 0.0.0
author = Yannick S. F
author_email = yannick.feler@gmail.com
description = JSON DB & ElasticSearch like modules
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/YannickSF/Ark.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = ark
packages = find:
python_requires = >=3.6

[options.packages.find]
where = ark